# em-bindgen

./: .gitignore  Cargo.toml  Justfile  build.rs  chrono.cpp  chrono.h  fetch.cpp  fetch.h  file_dialog.cpp  file_dialog.h  file_dialog.js  glue.cpp  glue.h  index.html  test.h
.cargo/: config.toml
examples/: Cargo.toml
examples/src/: lib.rs  main.rs
macros/: Cargo.toml
macros/src/: em_js.rs  lib.rs
src/: chrono.rs  console.rs  fetch.rs  future.rs  html.rs  lib.rs  proxying.rs  socket.rs  value.rs  wget.rs
src/sync/: mutex.rs
src/utils/: file_dialog.rs
