[package]
name = "em-bindgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["asyncify", "proxying"]
asyncify = []
fetch = ["dep:http"]
proxying = ["dep:futures"]

[dependencies]
bitflags = "2.5.0"
docfg = "0.1.0"
futures = { version = "0.3.30", features = ["executor"], optional = true }
http = { version = "1.1.0", optional = true }
libc = "0.2.155"
memchr = "2.7.4"
pin-project = "1.1.5"
semver = "1.0.23"
thiserror = "1.0.61"
utils-atomics = { version = "1.1.2", features = ["futures"] }

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.100"
color-eyre = "0.6.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["examples"]
