[package]
name = "em-bindgen"
version = "0.1.0"
edition = "2021"

[features]
default = ["html", "fetch", "asyncify", "proxying"]
asyncify = []
fetch = ["dep:http"]
proxying = []
html = []

[dependencies]
bitflags = "2.5.0"
docfg = "0.1.0"
futures = { version = "0.3.30", features = ["executor"] }
http = { version = "1.1.0", optional = true }
libc = "0.2.155"
memchr = "2.7.4"
pin-project = "1.1.5"
semver = "1.0.23"
thiserror = "1.0.61"
utils-atomics = { version = "1.1.2", features = ["futures"] }
em-bindgen-macros = { path = "macros" }
concat-idents = "1.1.5"
ffi-closure = "1.1.0"
mime_guess = "2.0.5"
log = "0.4.22"
typed-arena = "2.0.2"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.1.8"
color-eyre = "0.6.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["examples", "macros"]

[profile.dev]
opt-level = "s"
